--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           </p>
 
           <button class="form-btn" >
-          <a href="assets/documents/Sohail_Gidwani_Resume_August_2024.pdf" target="_blank" class="resume-link">   
+          <a href="D:\tushar\PortFolio\Prof_Portfolio-main\assets\documents\Resume_TusharKhatri.pdf" target="_blank" class="resume-link">   
               <!-- <ion-icon name="paper-plane"></ion-icon> -->
               <ion-icon name="document-text-outline"></ion-icon>
               <span> Traditional Resume</span>
